Add iso macroelement on an interval (#680)
* Add polyset::type input to all polyset functions, pass standard in everywhere for now

* Add polyset_type input to FiniteElement constructor

* implement quadrature for macro element on interval

* implement macro polyset on an interval

* Add test, update demos, clang format

* update _basixcpp.pyi

* tabulate_polynomial_set

* Remove overload of make_quadrature, add python function with optional args instead

* default value

* flake8

* correct _basixcpp.pyi

* rule=

* update demos

* flake8

* flake8

* Add new element to test_create

* update README

* dolfinx branch

* Add polyset_type input to custom element

* flake

* _

* implement polyset_type for more elements

* update tests

* pt -> ptype

* update _basixcpp.pyi

* update demos

* document arg

* add "iso" to family strings

* _basixcpp.pyi

* move basix.quadrature.make_quadrature back to basix.make_quadrature

--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -51,7 +51,7 @@ jobs:
         if: github.event_name != 'workflow_dispatch'
         run: |
           python3 -m pip install git+https://github.com/FEniCS/ufl.git
-          python3 -m pip install git+https://github.com/FEniCS/ffcx.git
+          python3 -m pip install git+https://github.com/FEniCS/ffcx.git@mscroggs/make_quadrature
       - name: Install FEniCS Python components
         if: github.event_name == 'workflow_dispatch'
         run: |
@@ -64,7 +64,7 @@ jobs:
         with:
           path: ./dolfinx
           repository: FEniCS/dolfinx
-          ref: main
+          ref: mscroggs/make_quadrature
       - name: Get DOLFINx
         if: github.event_name == 'workflow_dispatch'
         uses: actions/checkout@v3
