--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
 # We require that the user installs cmake
-requires = ["setuptools>=42", "wheel", "nanobind>=1.5.1", "cmake"]
+requires = ["setuptools>=42", "wheel", "nanobind>=1.5.1", "cmake>=3.19"]
 
 build-backend = "setuptools.build_meta"
