Undo some CMake changes

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.19)
 
-PROJECT(basix_nanobind VERSION "0.7.0.0" LANGUAGES CXX)
+PROJECT(basix_nanobind VERSION "0.7.0.0"  LANGUAGES CXX)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 20)
@@ -8,14 +8,20 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 # See https://gitlab.kitware.com/cmake/cmake/-/issues/16414
-if(TARGET basix)
+if (TARGET basix)
   add_library(Basix::basix ALIAS basix)
 else()
   # Find Basix (C++)
   find_package(Basix REQUIRED)
 endif()
 
-find_package(Python3 COMPONENTS Interpreter Development.Module REQUIRED)
+# Correct COMPONENT specification Development.Module added only in CMake
+# 3.18 and above.
+if(NOT SKBUILD)
+  find_package(Python3 COMPONENTS Interpreter Development.Module REQUIRED)
+endif()
+
+find_package(Python COMPONENTS Interpreter Development REQUIRED)
 
 # Detect the installed nanobind package and import it into CMake
 execute_process(
@@ -32,20 +38,20 @@ target_link_libraries(_basixcpp PRIVATE Basix::basix)
 include(CheckCXXCompilerFlag)
 
 CHECK_CXX_COMPILER_FLAG("-Wall -Werror -Wextra -Wno-comment -pedantic" HAVE_PEDANTIC)
-
-if(HAVE_PEDANTIC)
+if (HAVE_PEDANTIC)
   target_compile_options(_basixcpp PRIVATE -Wall;-Wextra;-Werror;-Wno-comment)
 endif()
 
 # scikit-build specific steps
-if(SKBUILD)
+if (SKBUILD)
   # Add relative rpath so _basixcpp can find the Basix::basix library
   # when the build is relocated
-  if(APPLE)
+  if (APPLE)
     set_target_properties(_basixcpp PROPERTIES INSTALL_RPATH "@loader_path/lib")
   else()
     set_target_properties(_basixcpp PROPERTIES INSTALL_RPATH "$ORIGIN/lib")
   endif()
 
   install(TARGETS _basixcpp DESTINATION basix)
+
 endif()
