Switch from pybind11 to nanobind (#676)
* Work on nanobind test

* CMake Python update

* More updates

* More updates

* ugly memory management fixes

* Add convenience wrapper make_copy_owner

* Install libnanobind

* Improve capsule

* Updates

* Update comment

* make as_nbtensor work for std::vector

* Add a few more nb_tensor

* A few more fixes

* A few more

* Get past hashing problem

* Use latest nanobind

* Fix another return with xt

* version of nanobind

* flake8

* Use __name__

* fix final tests

* flake8

* A few more fixes

* Try different signature

* Remove commented code

* Install nanobind

* Update pythonapp.yml

* Update wrapper.cpp

* Try branch for nanobind

* memory for unique

* Disable tests I don't care about:

* Some hack to accept const array

* More updates

* Add tuple

* Fix installation

* Comment out mypy

* Update tests

* Tidying

* Some test fixes

* Fix enum test

* Get docs working again

* fix

* Fixes to typing

* Clean up CMakeLists.txt in python

* Possible fix for ffcx integration

* Fixup test

* flake8

* Small fixes

* Updates

* Updates

* Disable cryptic tests

* Ownership fixes

* Updates

* flake8 fix

* Type fix

* Test fix

* Update docs

* Get docs working

* Point CI to DOLFINx branch

* Update DOLFINx branch

* const updates in wrappers

* flake8 fixes

* Add more nanobind shaope info

* const fixes

* Add array shape info

* Simplify return

* Update readme

* Text update

* Get test working

* Remove shapes

* Test updates

* Bump required CMake (matches DOFLINx)

* CMake version consistency

* Undo some CMake changes

* CMake simplifications

---------

Co-authored-by: Garth N. Wells <gnw20@cam.ac.uk>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ testpaths = ["test"]
 # addopts = "-n auto --durations 20"
 
 [build-system]
-requires = ["pybind11>=2.9.1", "cmake>=3.19", "scikit-build-core"]
+requires = ["nanobind>=1.5.1", "cmake>=3.19", "scikit-build-core"]
 build-backend = "scikit_build_core.build"
 
 [tool.scikit-build]
