Remove setup.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ authors = [{email="fenics-dev@googlegroups.com"}, {name="FEniCS Project"}]
 packages = ["basix"]
 dependencies = ["numpy>=1.21"]
 
+[project.urls]
+homepage = "https://fenicsproject.org"
+repository = "https://github.com/fenics/basix.git"
+documentation = "https://docs.fenicsproject.org"
+
 [project.optional-dependencies]
 docs = ["markdown", "pylit3", "pyyaml", "sphinx==5.0.2", "sphinx_rtd_theme"]
 lint = ["flake8", "pydocstyle", "isort"]
