--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.19)
 
 project(BasixFull VERSION "0.8.0.0" LANGUAGES CXX)
-set(BASIC_FULL_SKBUILD TRUE)
+set(BASIX_FULL_SKBUILD TRUE)
 add_subdirectory(cpp)
 add_subdirectory(python)
