--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -25,4 +25,4 @@ ci = ["mypy", "pytest-xdist", "fenics-basix[docs,lint,test,optional]"]
 [tool.scikit-build]
 minimum-version = "0.5"
 cmake.minimum-version = "3.19.0"
-wheel.packages = ["python/basix"]
+wheel.packages = ["basix"]
