Shouldn't use github link for pypi.org

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = ["numpy>=1.21"]
 [project.optional-dependencies]
 docs = ["markdown", "pylit3", "pyyaml", "sphinx==5.0.2", "sphinx_rtd_theme"]
 lint = ["flake8", "pydocstyle", "isort"]
-optional = ["numba", "fenics-ufl@git+https://github.com/FEniCS/ufl.git@2023.2.0"]
+optional = ["numba", "fenics-ufl>=2023.2.0,<2023.3.0.dev0"]
 test = ["pytest", "sympy", "scipy", "matplotlib", "fenics-basix[optional]"]
 ci = ["mypy", "pytest-xdist", "fenics-basix[docs,lint,test,optional]"]
 
