--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y doxygen graphviz libopenblas-dev liblapack-dev ninja-build
+          python3 -m pip install git+https://github.com/wjakob/nanobind.git
 
       - name: Install Basix
         run: python3 -m pip -v install .[ci]
