Improve nanobind bindings and memory management (#724)
* Improvements to ndarray bindings

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -33,6 +33,7 @@ CHECK_CXX_COMPILER_FLAG("-Wall -Werror -Wextra -Wno-comment -pedantic" HAVE_PEDA
 
 if(HAVE_PEDANTIC)
   target_compile_options(_basixcpp PRIVATE -Wall;-Wextra;-Werror;-Wno-comment)
+  # target_compile_options(_basixcpp PRIVATE -Wall;-Wextra;-Werror;-Wno-comment;-pedantic)
 endif()
 
 # Add relative rpath so _basixcpp can find the Basix::basix library
