--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -25,11 +25,11 @@ on:
 jobs:
   build:
     name: Run DOLFINx tests
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     container: ghcr.io/fenics/test-env:current-openmpi
 
     env:
-      PETSC_ARCH: linux-gnu-complex-32
+      PETSC_ARCH: linux-gnu-real64-32
       OMPI_ALLOW_RUN_AS_ROOT: 1
       OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: 1
       OMPI_MCA_rmaps_base_oversubscribe: 1
