--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Install DOLFINx (Python)
         run: |
           python3 -m pip install -r dolfinx/python/build-requirements.txt # TO REMOVE
-          python3 -m pip -v install --global-option build --global-option --debug dolfinx/python/
+          python3 -m pip -v install --check-build-dependencies --no-build-isolation dolfinx/python/
 
       - name: Run mypy checks
         run: |
