--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -25,11 +25,11 @@ on:
 jobs:
   build:
     name: Run DOLFINx tests
-    runs-on: ubuntu-22.04
-    container: fenicsproject/test-env:nightly-openmpi
+    runs-on: ubuntu-latest
+    container: ghcr.io/fenics/test-env:current-openmpi
 
     env:
-      PETSC_ARCH: linux-gnu-complex-32
+      PETSC_ARCH: linux-gnu-complex64-32
       OMPI_ALLOW_RUN_AS_ROOT: 1
       OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: 1
       OMPI_MCA_rmaps_base_oversubscribe: 1
@@ -72,12 +72,15 @@ jobs:
           path: ./dolfinx
           repository: FEniCS/dolfinx
           ref: ${{ github.event.inputs.dolfinx_branch }}
-      - name: Install DOLFINx
+      - name: Install DOLFINx (C++)
         run: |
           cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build -S dolfinx/cpp/
           cmake --build build
           cmake --install build
-          python3 -m pip -v install --global-option build --global-option --debug dolfinx/python/
+      - name: Install DOLFINx (Python)
+        run: |
+          python3 -m pip install -r dolfinx/python/build-requirements.txt # TO REMOVE
+          python3 -m pip -v install --check-build-dependencies --no-build-isolation dolfinx/python/
 
       - name: Run mypy checks
         run: |
